# buckinghamshire-council

./: .dockerignore  .eslintignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .stylelintignore  .travis.yml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  Vagrantfile  browsersync.config.js  docker-compose.yml  fabfile.py  gunicorn.conf.py  heroku.yml  index.html  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  sitemap.xml  stellar.yaml  webpack.config.js
.circleci/: config.yaml
.github/workflows/: publish_docs.yml
.gitlab/merge_request_templates/: Bugfix.md  Default.md  MR guidelines.md  Release.md
CHANGELOG/: index.html
anonymised-data/: index.html
bc/: urls.py  wsgi.py
bc/alerts/: models.py  wagtail_hooks.py
bc/alerts/migrations/: 0001_initial.py  0002_alert_alert_level.py  0003_alter_alert_content.py  0004_allow_null_alert_page.py
bc/alerts/templatetags/: alert_tags.py
bc/alerts/tests/: fixtures.py  test_alerts.py
bc/area_finder/: apps.py  client.py  constants.py  urls.py  utils.py  views.py
bc/area_finder/tests/: test_views.py
bc/blogs/: birdbath.py  forms.py  models.py  utils.py  views.py  wagtail_hooks.py
bc/blogs/migrations/: 0001_initial.py  0002_blogpostpage.py  0003_featured_blogpost.py  0004_add_social_links_bloghomepage.py  0004_blogalertsubscription.py  0005_blogpostpage_intro_text.py  0006_alter_bloghomepage_about_page.py  0007_blogglobalhomepage.py  0007_relatedcategories.py  0008_blogalertsubscription.py  0008_bloghomepagecategories.py  0008_blogpostpage_categories.py  0009_notificationrecord.py  0010_merge_20220725_1854.py  0011_blogaboutpage.py  0012_storyblock_table_and_plaintexttable.py  0013_wagtail_3_upgrade.py  0014_required_listing_summary.py  0015_add_markdown_links_to_table.py  0015_add_waste_wizard_block.py  0016_add_help_text_to_plain_tables.py  0017_tableblock_help_text.py  0018_add_directory_search_block.py  0018_add_directory_widget.py  0018_add_ehcco_search_widget.py  0018_add_fis_directory_widget.py  0019_add_directory_search_block.py  0020_directory_search_block__add_bucks_online_directory_option.py  0021_alter_blogaboutpage_body_alter_blogpostpage_body.py  0021_alter_blogaboutpage_body_alter_blogpostpage_body_.py  0022_alter_blogaboutpage_body_alter_blogpostpage_body.py
bc/campaigns/: blocks.py  models.py
bc/campaigns/migrations/: 0001_campaign_page_model.py  0002_campaignpage_sections.py  0003_add_section_content_blocks.py  0004_image_or_embed_block.py  0005_add_directory_banner_block.py  0006_add_full_width_banner.py  0007_campaignindexpage.py  (+6 more)
bc/cases/: apps.py  blocks.py  forms.py  models.py  utils.py
bc/documents/: models.py
bc/events/: models.py  tests.py
bc/family_information/: blocks.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
bc/feedback/: context_processors.py  filters.py  forms.py  models.py  urls.py  views.py  wagtail_hooks.py
bc/forms/: blocks.py  fixtures.py  forms.py  models.py  tests.py  wagtail_hooks.py
bc/home/: models.py
bc/images/: models.py
bc/inlineindex/: apps.py  models.py
bc/location/: blocks.py  models.py
bc/longform/: apps.py  blocks.py  models.py  tests.py
bc/migration_utils/: aligned_columns_data_migration.py  handlers.py  typedtable_data_migration.py
bc/navigation/: models.py  tests.py
bc/news/: models.py
bc/people/: models.py  wagtail_hooks.py
bc/project_styleguide/: apps.py
bc/promotional/: apps.py  models.py  navigation.py  signal_handlers.py  utils.py
bc/recruitment/: birdbath.py  blocks.py  constants.py  forms.py  models.py  text_utils.py  utils.py  wagtail_hooks.py
bc/recruitment_api/: cache.py  client.py  constants.py  transports.py  utils.py
bc/search/: apps.py  elasticsearch5.py  elasticsearch7.py  models.py  query.py  signal_handlers.py  utils.py  views.py
bc/service_directory/: admin_choosers.py  admin_views.py  api_client.py  api_schema.py  blocks.py  client.py  models.py  resources.py  services.py  taxonomies.py  types.py  wagtail_hooks.py
bc/settings/: .gitignore  base.py  dev.py  local.py.example  production.py  test.py  test.py.example
bc/standardpages/: models.py
bc/step_by_step/: apps.py  factories.py  models.py  tests.py  utils.py  wagtail_hooks.py
bc/users/: __init__.py  apps.py
bc/utils/: blocks.py  cache.py  choices.py  constants.py  context_processors.py  email.py  embed_finders.py  middleware.py  models.py  utils.py  validators.py  views.py  wagtail_hooks.py  widgets.py
complaints-and-requests/: index.html
continuous-deployment/: index.html
continuous-integration/: index.html
contributing/: index.html
cookies/: index.html
custom-features/form-builder/: index.html
data-protection/: index.html
docker/: bashrc.sh  docker-compose-frontend.yml
docs/: anonymised-data.md  anonymised_data.md  complaints-and-requests.md  continuous-deployment.md  continuous-integration.md  contributing.md  cookies.md  data-protection.md  data_protection.md  deployment.md  email-and-sms.md  email_and_sms.md  front-end-tooling.md  hosting.md  index.md  infrastructure.md  live-chat-client.md  location-autocomplete.md  location-maps-widget.md  postcode-lookup.md  project-conventions.md  project_conventions.md  recruitment-site.md  recruitment_site.md  service-directory.md  technical-debt.md  upgrading.md
docs/custom-features/: form-builder.md
email-and-sms/: index.html
front-end-tooling/: index.html
hosting/: index.html
infrastructure/: index.html
live-chat-client/: index.html
location-autocomplete/: index.html
location-maps-widget/: index.html
postcode-lookup/: index.html
project-conventions/: index.html
public/: BingSiteAuth.xml
recruitment-site/: index.html
search/: search_index.json
service-directory/: index.html
technical-debt/: index.html
upgrading/: index.html
vagrant/: provision.sh
wagtailorderable_patch/: models.py
(+1260 files in other folders)
