[tool.poetry]
name = "bc"
version = "0.1.0"
description = "Buckinghamshire Council Website"
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
python = "~3.8"
bleach = "^6.1.0"
dataclasses-json = "^0.6.7"
dj-database-url = "2.2.0"
Django = "~4.2"
django-basic-auth-ip-whitelist = "^0.6"
django-birdbath = "^2.0.0"
django-csp = "3.8"
django-gov-notify = "^0.5.0"
django-pattern-library = "~1.2.0"
django-redis = "~5.4.0"
django-referrer-policy = "1.0"
django-storages = {version = "1.14.3", extras = ["boto3"]}
elasticsearch = "7.9.0"
factory-boy = "3.3.0"
freezegun = "1.5.1"
gunicorn = {version = "~22.0", optional = true}
psycopg2 = "~2.9"
PyJWT = "2.8.0"
scout-apm = "~3.1"
tabulate = "0.9.0"
urllib3 = "1.26.19"
wagtail = "~6.1"
wagtail-django-recaptcha = {git = "https://github.com/torchbox-forks/wagtail-django-recaptcha", tag = "2.1.1+tbx"}
wagtail-factories = "^4.2.1"
wagtail-orderable = "^1.2.0"
wagtail-transfer = "^0.9.4"
wagtailgeowidget = "8.1.1"
whitenoise = "~6.7"
zeep = "4.2.1"
sentry-sdk = "^2.7.1"
backoff = "^2.2.1"
responses = "0.25.3"
django-filter = "^24.2"
wagtail-modeladmin = "^2.0.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.3"
django-xff = "^1.4.0"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
# Docs dependencies
mkdocs = "1.6.0"
mkdocs-material = "9.5.28"
pymdown-extensions = "10.8.1"

# Linting
black = "24.4.2"
detect-secrets = "1.5.0"
flake8 = "~5.0"
isort = "5.13.2"
seed-isort-config = "2.2.0"

# Database snapshots
DSLR = "0.4.0"
stellar = "0.4.5"

# Pinned for stellar 0.4.5
SQLAlchemy = "2.0.31"
SQLAlchemy-Utils = "0.41.2"

# Development dependencies
django-extensions = "~3.2"
honcho = "^1.1.0"
pre-commit = "1.16.1"
Werkzeug = "3.0.3"
tblib = "^3.0.0"
django-upgrade = "1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
