[tool.poetry]
name = "bc"
version = "0.1.0"
description = "Buckinghamshire Council Website"
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
# Platform
python = "~3.11"
Django = "~4.2"
wagtail = "~6.2"
gunicorn = {version = "~22.0", optional = true}
psycopg2 = "~2.9"

# Django packages
django-basic-auth-ip-whitelist = "^0.6"
django-birdbath = "^2.0.0"
django-csp = "~3.8"
django-filter = "^24.2"
django-gov-notify = "^0.6.0"
django-pattern-library = "~1.2.0"
django-redis = "~5.4.0"
django-referrer-policy = "1.0"
django-storages = {version = "1.14.3", extras = ["boto3"]}
django-xff = "^1.4.0"
dj-database-url = "2.3.0"

# Wagtail packages
wagtail-django-recaptcha = {git = "https://github.com/torchbox-forks/wagtail-django-recaptcha", tag = "2.1.1+tbx"}
wagtail-factories = "^4.2.1"
wagtailgeowidget = "8.1.1"
wagtail-modeladmin = "^2.0.0"
wagtail-orderable = "^1.2.0"
wagtail-transfer = "^0.9.4"

# Other packages
backoff = "^2.2.1"
beautifulsoup4 = "^4.12.3"
bleach = "^6.1.0"
dataclasses-json = "^0.6.7"
elasticsearch = "7.9.0"
factory-boy = "~3.3"
freezegun = "1.5.1"
html5lib = "^1.1"
PyJWT = "2.9.0"
requests = "^2.32.3"
responses = "0.25.3"
scout-apm = "~3.2"
sentry-sdk = "^2.7.1"
tabulate = "0.9.0"
whitenoise = "~6.8"
zeep = "~4.3"
phonenumberslite = "^8.13.50"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
# Docs dependencies
mkdocs = "~1.6"
mkdocs-material = "~9.5"
pymdown-extensions = "~10.12"

# Linting
black = "~24"
detect-secrets = "1.5.0"
flake8 = "~7.1"
isort = "5.13.2"
seed-isort-config = "2.2.0"

# Database snapshots
DSLR = "0.4.0"
stellar = "0.4.5"

# Pinned for stellar 0.4.5
SQLAlchemy = "2.0.31"
SQLAlchemy-Utils = "0.41.2"

# Development dependencies
django-extensions = "~3.2"
honcho = "~2.0"

pre-commit = "~4.0"
Werkzeug = "~3.1"
tblib = "^3.0.0"
pyupgrade = "^3.15.2"
django-upgrade = "~1.22"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
