[tool.poetry]
name = "bc"
version = "0.1.0"
description = "Buckinghamshire Council Website"
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
# Platform
python = "~3.11"
Django = "~4.2"
wagtail = "~6.4"
gunicorn = {version = "~23.0", optional = true}
psycopg2 = "~2.9"

# Django packages
django-basic-auth-ip-whitelist = "^0.8"
django-birdbath = "^2.0.0"
django-csp = "~4.0"
django-filter = "^25.1"
django-gov-notify = "^0.6.0"
django-pattern-library = "^1.3.0"
django-redis = "~6.0.0"
django-storages = {version = "1.14.6", extras = ["boto3"]}
django-xff = "^1.4.0"
dj-database-url = "3.0.1"

# Wagtail packages
wagtail-django-recaptcha = {git = "https://github.com/torchbox-forks/wagtail-django-recaptcha", tag = "2.1.1+tbx"}
wagtail-factories = "^4.2.1"
wagtailgeowidget = "^9.0.0"
wagtail-modeladmin = "^2.2.0"
wagtail-orderable = {git = "https://github.com/torchbox-forks/wagtail-orderable", tag = "1.3.1+tbx"}
wagtail-transfer = "^0.9.4"

# Other packages
backoff = "^2.2.1"
beautifulsoup4 = "^4.12.3"
bleach = "^6.1.0"
dataclasses-json = "^0.6.7"
elasticsearch = "^9.1.0"
factory-boy = "~3.3"
freezegun = "^1.5.5"
html5lib = "^1.1"
PyJWT = "2.10.1"
requests = "^2.32.3"
responses = "^0.25.8"
scout-apm = "^3.3.0"
sentry-sdk = "^2.7.1"
tabulate = "0.9.0"
whitenoise = "~6.9"
zeep = "~4.3"
phonenumberslite = "^9.0.11"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
# Docs dependencies
mkdocs = "~1.6"
mkdocs-material = "~9.5"
pymdown-extensions = "~10.14"

# Linting
black = "~24"
detect-secrets = "1.5.0"
flake8 = "~7.1"
isort = "5.13.2"
seed-isort-config = "2.2.0"

# Database snapshots
DSLR = "0.4.0"
stellar = "0.4.5"

# Pinned for stellar 0.4.5
SQLAlchemy = "2.0.37"
SQLAlchemy-Utils = "0.41.2"

# Development dependencies
django-extensions = "~3.2"
honcho = "~2.0"

pre-commit = "~4.0"
Werkzeug = "~3.1"
tblib = "^3.0.0"
pyupgrade = "^3.19.1"
django-upgrade = "~1.22"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
